--- a/category.html
+++ b/category.html
@@ -2,16 +2,12 @@
 layout: default
 ---
 
-<div class="posts">
-	{% for category in site.categories %}
-	  <li><a name="{{ category | first }}">{{ category | first }}</a>
-		<ul>
-		{% for posts in category %}
-		  {% for post in posts %}
-			<li><a href="{{ post.url }}">{{ post.title }}</a></li>
-		  {% endfor %}
-		{% endfor %}
-		</ul>
-	  </li>
-	{% endfor %}
-</div>
+{% for category in site.categories %}
+<h2>{{ category | first }}</h2>
+</span>{{ category | last | size }}</span>
+<ul class="arc-list">
+    {% for post in category.last %}
+        <li>{{ post.date | date:"%d/%m/%Y"}}<a href="{{ post.url }}">{{ post.title }}</a></li>
+    {% endfor %}
+</ul>
+{% endfor %}
