--- a/category.html
+++ b/category.html
@@ -6,7 +6,7 @@ layout: default
 <h2>{{ category | first }} </span>(total:{{ category | last | size }})</span></h2>
 <ul class="arc-list">
     {% for post in category.last %}
-        <li>{{ post.date | date:"%d/%m/%Y"}}<a href="{{ post.url }}">{{ post.title }}</a></li>
+        <li>{{ post.date | date:"yyyy-MM-dd"}} &nbsp;&nbsp;&nbsp;&nbsp; <a href="{{ post.url }}">{{ post.title }}</a></li>
     {% endfor %}
 </ul>
 {% endfor %}
